src/test/deca/context/invalid/notYetImplemented/test_pass_2_method_field_same_name.deca
// Description:
//    Program testing pass 2, declare a method with a field name
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025


class Test{
    int x;

    void x(){
	
    }
}


